--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,13 +1,4 @@
 {
 	"extends": "./tsconfig.base.json",
-	"include": [
-		"jest.config.ts",
-		"packages/**/*.mjs",
-		"packages/**/*.ts",
-		"packages/**/jest.config.ts",
-		"packages/**/scripts/rollup.config.ts",
-		"packages/**/tests/*.ts",
-		"scripts",
-		"tests/**/*.ts"
-	]
+	"include": ["jest.config.ts", "packages/**/*.ts", "tests/**/*.ts"]
 }
