--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
 	],
 	"scripts": {
 		"clean": "rimraf packages/**/dist packages/**/node_modules/.cache",
-		"clean:full": "yarn clean && rimraf packages/**/node_modules",
 		"lint": "eslint packages --ext mjs,ts --fix",
 		"format": "prettier --write packages/**/{src,tests,scripts}/**/*.{mjs,ts}",
 		"test": "jest --verbose",
-		"test:watch": "jest --verbose --watch",
 		"build": "lerna run build",
-		"commit": "git-cz --disable-emoji",
+		"prepublishOnly": "lerna run prepublishOnly",
 		"update": "yarn upgrade-interactive --latest",
 		"prepare": "husky install"
 	},
@@ -28,7 +26,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"eslint": "^8.0.0",
 		"eslint-config-prettier": "^8.3.0",
-		"gen-esm-wrapper": "^1.1.3",
 		"husky": "^7.0.4",
 		"jest": "^27.2.5",
 		"jest-circus": "^27.2.5",
@@ -37,6 +34,8 @@
 		"prettier": "^2.4.1",
 		"pretty-quick": "^3.1.1",
 		"rollup": "^2.58.0",
+		"rollup-plugin-cleaner": "^1.0.0",
+		"rollup-plugin-typescript2": "^0.31.1",
 		"rollup-plugin-version-injector": "^1.3.3",
 		"ts-jest": "^27.0.4",
 		"ts-node": "^10.2.1",
